gcc/testsuite/rust/rustc/ui/rfc-2126-crate-paths/keyword-crate-as-identifier.rs
#![feature(crate_in_paths)]

fn main() {
    let crate = 0;
// { dg-error ".E0532." "" { target *-*-* } .-1 }
}

